# YeetMouse

./: Makefile  install.sh
.github/workflows/: build_and_test.yml  integration.yml
driver/: Makefile  accel.c  accel_modes.c  accel_modes.h  driver.c
driver/FixedMath/: Fixed64.h  FixedUtil.h
gui/: .gitignore  ConfigHelper.h  CustomCurve.cpp  CustomCurve.h  DriverHelper.cpp  DriverHelper.h  FunctionHelper.cpp  ImGuiExtensions.cpp  ImGuiExtensions.h  Makefile  gui.cpp  gui.h  main.cpp
nix/: .gitignore  module.nix  package.nix
tests/: CMakeLists.txt  TestManager.cpp  TestManager.h  Tests.cpp  Tests.h  config.h  main.cpp
tools/yeetmousectl/: .gitignore  Makefile
